# mcp-azure-loganalytics

./: LICENSE  README.md  mcp_azure_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
test/: test2.py
